kubernetes/qbittorrent/qbittorrent-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: qbittorrent
  namespace: qbittorrent
spec:
  replicas: 1
  selector:
    matchLabels:
      app: qbittorrent
  template:
    metadata:
      labels:
        app: qbittorrent
    spec:
      restartPolicy: Always
      containers:
        - name: gluetun
          image: qmcgaw/gluetun:v3
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              protocol: TCP
            - containerPort: 63202
              protocol: TCP
          securityContext:
            capabilities:
              add:
                - NET_ADMIN

        - name: qbittorrent
          image: lscr.io/linuxserver/qbittorrent:latest
          imagePullPolicy: Always
          volumeMounts:
            - mountPath: /config
              name: qbittorrent-config
            - mountPath: /media
              name: qbittorrent-media

        - name: qbittorrent-exporter
          image: ghcr.io/martabal/qbittorrent-exporter:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8090
              protocol: TCP

      volumes:
        - name: qbittorrent-config
          hostPath:
            path: /home/thelegend27/homeserver/qbittorrent/gluetun
        - name: qbittorrent-media
          hostPath:
            path: /mnt/media
