kubernetes/qbittorrent/qbittorrent-gluetun.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: qbittorrent-gluetun
  namespace: qbittorrent
spec:
  replicas: 1
  selector:
    matchLabels:
      app: qbittorrent-gluetun
  template:
    metadata:
      labels:
        app: qbittorrent-gluetun
    spec:
      containers:
        - name: gluetun
          image: qmcgaw/gluetun:latest
          securityContext:
            capabilities:
              add:
                - NET_ADMIN
          ports:
            - containerPort: 8080   # qBittorrent WebUI (via gluetun)
            - containerPort: 63202

        - name: qbittorrent
          image: lscr.io/linuxserver/qbittorrent:latest
          volumeMounts:
            - mountPath: /config
              name: qbittorrent-config
            - mountPath: /media
              name: qbittorrent-media
      volumes:
        - name: qbittorrent-config
          hostPath:
            path: /home/thelegend27/homeserver/qbittorrent/gluetun
        - name: qbittorrent-media
          hostPath:
            path: /mnt/media
