kubernetes/qbittorrent/qbittorrent-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: qbittorrent
  namespace: qbittorrent
spec:
  type: ClusterIP
  selector:
    app: qbittorrent
  ports:
    - name: "http"
      port: 8080
    - name: "bittorrent"
      port: 63202
    - name: "metrics"
      port: 8090
