kubernetes/qbittorrent/qbittorrent-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: qbittorrent-ingress
  namespace: qbittorrent
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: qBitorrent
    gethomepage.dev/description: Torrents
    gethomepage.dev/icon: qbittorrent.png
    gethomepage.dev/group: Media Management
    gethomepage.dev/pod-selector: app=qbittorrent-wireguard
    gethomepage.dev/widget.type: qbittorrent
    gethomepage.dev/widget.url: http://qbittorrent-wireguard.qbittorrent:8080
    gethomepage.dev/widget.username: ""
    gethomepage.dev/widget.password: ""
spec:
  ingressClassName: caddy
  rules:
  - host: torrent.admin.thelegend27.fr
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: qbittorrent-wireguard
            port:
              number: 8080
